--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-demo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chaspatr.github.io/react-jeopardy",
+  "homepage": "https://chaspatr.github.io/react-jeopardy/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
